--- a/app/views/cadastro.html
+++ b/app/views/cadastro.html
@@ -1,13 +1,9 @@
 % rebase('base.html', title='Fazer cadastro')
 
-<div class="container">
-    <div class="row vertical-offset-100">
-    	<div class="col-md-4 col-md-offset-4">
-    		<div class="panel panel-default">
-			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Cadastro:</h3>
-			 	</div>
-			  	<div class="panel-body">
+  	<div class="panel-heading">
+  		<h3 class="panel-title">Cadastro</h3>
+  	</div>
+  	<div class="panel-body">
 			    	<form accept-charset="UTF-8" role="form" action="cadastro" method="post">
                     <fieldset>
 			    	  	<div class="form-group">
@@ -21,7 +17,8 @@
 			    		<input class="btn btn-lg btn-success btn-block" type="submit" value="Cadastrar">
 			    	</fieldset>
 			      	</form>
+			      	%if existe_username:
+			      		<p style="color:red"><strong>Este USERNAME já existe!!</strong></p>
+			      	%end
 			      	<p><a href="login"> Clique aqui</a> para fazer o login</p>
-			    </div>
-			</div>
-		</div>
+</div>
