--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,13 +1,9 @@
 % rebase('base.html', title='Fazer login')
 
-<div class="container">
-    <div class="row vertical-offset-100">
-    	<div class="col-md-4 col-md-offset-4">
-    		<div class="panel panel-default">
-			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Login:</h3>
-			 	</div>
-			  	<div class="panel-body">
+	<div class="panel-heading">
+  		<h3 class="panel-title">Login</h3>
+  	</div>
+  	<div class="panel-body">
 			    	<form accept-charset="UTF-8" role="form" action="/" method="post">
                     <fieldset>
 			    	  	<div class="form-group">
@@ -20,6 +16,5 @@
 			    	</fieldset>
 			      	</form>
 			      	<p><a href="cadastro"> Clique aqui</a> para fazer o cadastro</p>
-			    </div>
-			</div>
-		</div>
+	</div>
+		
