--- a/app/views/lista_usuarios.html
+++ b/app/views/lista_usuarios.html
@@ -4,9 +4,16 @@
   		<h3 class="panel-title">Lista de Usuários</h3>
   	</div>
 
-	<ul class="list-group" style="width: 20%">
+	<ul class="list-group" >
+		%if acesso:
+
 		%for usuario in usuarios:
 		<li class="list-group-item">{{usuario.username}}</li>
+		%end
+		%else:
+		<center>
+			<p style="color:red"><strong>Acesso NEGADO!!</strong></p>
+		</center>
 		%end
 	</ul>
 
